services/wiki/k8s/overlays/staging/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wiki-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - staging-wiki.wetfish.net
  rules:
  - host: staging-wiki.wetfish.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wiki-web
            port:
              number: 80
